--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 </head>
 <body>
   <!-- <h1>111</h1> -->
-  <div class="carousel__wrapper">
-    <div class="carousel__scene js-carousel__scene">
-      <div class="carousel__cell">1</div>
-      <div class="carousel__cell">2</div>
-      <div class="carousel__cell">3</div>
-      <div class="carousel__cell">4</div>
-      <div class="carousel__cell">5</div>
-      <div class="carousel__cell">6</div>
-      <div class="carousel__cell">7</div>
-      <div class="carousel__cell">8</div>
-      <div class="carousel__cell">9</div>
-      <div class="carousel__cell">10</div>
-      <div class="carousel__cell">11</div>
-      <div class="carousel__cell">12</div>
-      <div class="carousel__cell">13</div>
-      <div class="carousel__cell">14</div>
-      <div class="carousel__cell">15</div>
+  <div class="visual">
+    <div class="carousel__body">
+      <div class="carousel__scene"> <!-- js-carousel__scene-->
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+        <div class="carousel__cell">
+          <p class="carousel__roof"></p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
