--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
   <!-- <h1>111</h1> -->
   <div class="visual">
     <div class="carousel__body">
-      <div class="carousel__scene"> <!-- js-carousel__scene-->
+      <div id="js-carousel__scene" class="carousel__scene">
         <div class="carousel__cell">
+          <div class="ballerina">
+            <div class="ballerina__head">
+              <p class="ballerina__head__hair__bangs"></p>
+              <p class="ballerina__head__hair__bun"></p>
+              <p class="ballerina__head__face"></p>
+            </div>
+            <div class="ballerina__body">
+              <div class="ballerina__body__upper"></div>
+              <div class="ballerina__body__arm"></div>                
+              <div class="ballerina__body__lower"></div>
+            </div>
+            <div class="ballerina__leg">
+              <p class="ballerina__leg__left"></p>
+              <p class="ballerina__leg__right"></p>
+            </div>
+          </div>
           <p class="carousel__roof"></p>
         </div>
         <div class="carousel__cell">
