--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             </div>
             <div class="ballerina__body">
               <div class="ballerina__body__upper"></div>
-              <div class="ballerina__body__arm"></div>                
+              <div class="ballerina__body__arm">
+                <p class="ballerina__body__arm__left"></p>
+                <p class="ballerina__body__arm__right"></p>
+              </div>                
               <div class="ballerina__body__lower"></div>
             </div>
             <div class="ballerina__leg">
@@ -36,7 +39,6 @@
               </div>
             </div>
           </div>
-          <div class="mat"></div>
           <p class="carousel__roof"></p>
         </div>
         <div class="carousel__cell">
